--- a/everyThing.html
+++ b/everyThing.html
@@ -122,8 +122,9 @@
         </div>
     </header>
     <section class="bg-[#f8f6f3]">
-        <div class=" flex flex-row justify-between w-[80%] mx-auto py-8  ">
-            <div class="order-2 md:order-1 flex flex-col  w-full lg:w-[30%]   px-2   border-r-2 border-stone-300 ">
+
+        <div class="  flex flex-col lg:flex-row justify-between w-[80%] mx-auto py-8  ">
+            <div class=" flex flex-col w-full lg:w-[25%] px-2 lg:border-r-2 lg:border-stone-300 ">
                 <div class="flex flex-row w-[80%]"><input type="text" placeholder=" Search..."
                         class=" input-sm w-full max-w-xs input-bordered border-2" />
                     <button class=" btn-sm bg-[#8bc34a]  hover:opacity-75 text-xl font-bold text-white ">></button>
@@ -138,28 +139,28 @@
                     <p>Groceries <span class="text-black">(10)</span></p>
                     <p>Juice <span class="text-black">(10)</span></p>
                 </div>
-                <div class="grid grid-cols-1 my-4 justify-start w-[80%]">
+                <div class="grid grid-cols-1 my-4 justify-start w-[80%] hidden lg:block ">
                     <div class="mx-auto my-2 space-y-2">
                         <img src="/images/edible-oil-300x300.jpg" alt="">
                         <p class="text-xl text-[#8bc34a] font-semibold">Natural Extracted Edible Oil</p>
                         <p class="text-lg font-light">$25.00</p>
                     </div>
                     <div class="mx-auto my-2 space-y-2">
-                        <img src="/images/edible-oil-300x300.jpg" alt="">
-                        <p class="text-xl text-[#8bc34a] font-semibold">Natural Extracted Edible Oil</p>
-                        <p class="text-lg font-light">$25.00</p>
+                        <img src="/images/sanitizer-300x300.jpg" alt="">
+                        <p class="text-xl text-[#8bc34a] font-semibold">Hand Sanitizer</p>
+                        <p class="text-lg font-light">$15.00</p>
                     </div>
                     <div class="mx-auto my-2 space-y-2">
-                        <img src="/images/edible-oil-300x300.jpg" alt="">
-                        <p class="text-xl text-[#8bc34a] font-semibold">Natural Extracted Edible Oil</p>
-                        <p class="text-lg font-light">$25.00</p>
+                        <img src="/images/wheat-300x300.jpg" alt="">
+                        <p class="text-xl text-[#8bc34a] font-semibold">Wheat From Organic Farms</p>
+                        <p class="text-lg font-light">$34.00</p>
                     </div>
 
 
                 </div>
             </div>
 
-            <div class="order-1 md:order-2 flex flex-col flex-row md:w-[100%] lg:w-[70%] mx-auto">
+            <div class=" flex flex-col md:w-[100%] lg:w-[70%] mx-auto lg:ml-8">
                 <div class=" mx-4">
                     <div class="text-md breadcrumbs">
                         <ul>
@@ -184,7 +185,7 @@
                         </select></div>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-3 w-full mx-2">
-                    <div class="flex flex-row flex-col justify-center items-center mx-2">
+                    <div class="flex flex-row flex-col justify-center items-center mx-2 my-4">
                         <div class="mb-3 mx-auto">
                             <img src="./images/coffee-asorted-300x300.jpg" class="" alt="">
                         </div>
@@ -203,14 +204,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="flex flex-row flex-col justify-center items-center mx-2">
+                    <div class="flex flex-row flex-col justify-center items-center mx-2 my-4">
                         <div class="mb-3 mx-auto">
-                            <img src="./images/coffee-asorted-300x300.jpg" class="" alt="">
+                            <img src="./images/diabetic-cookies-300x300.jpg" class="" alt="">
                         </div>
                         <div class="flex flex-col justify-center items-center text-center py-3 ">
                             <div class="">
                                 <p class="font-thin">Groceries</p>
-                                <p class="font-medium text-lg">Assorted Coffee</p>
+                                <p class="font-medium text-lg">Diabetic Cookies </p>
                                 <ul class="flex flex-row items-center justify-center">
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
@@ -218,18 +219,18 @@
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                 </ul>
-                                <p class="font-bold ">$35.00</p>
+                                <p class="font-bold ">$25.00</p>
                             </div>
                         </div>
                     </div>
-                    <div class="flex flex-row flex-col justify-center items-center mx-2">
+                    <div class="flex flex-row flex-col justify-center items-center mx-2 my-4">
                         <div class="mb-3 mx-auto">
-                            <img src="./images/coffee-asorted-300x300.jpg" class="" alt="">
+                            <img src="./images/cashew-butter-500.jpg" class="" alt="">
                         </div>
                         <div class="flex flex-col justify-center items-center text-center py-3 ">
                             <div class="">
                                 <p class="font-thin">Groceries</p>
-                                <p class="font-medium text-lg">Assorted Coffee</p>
+                                <p class="font-medium text-lg">Cashew Butter</p>
                                 <ul class="flex flex-row items-center justify-center">
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
@@ -237,18 +238,18 @@
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                 </ul>
-                                <p class="font-bold ">$35.00</p>
+                                <p class="font-bold ">$25.00</p>
                             </div>
                         </div>
                     </div>
-                    <div class="flex flex-row flex-col justify-center items-center mx-2">
+                    <div class="flex flex-row flex-col justify-center items-center mx-2 my-4">
                         <div class="mb-3 mx-auto">
-                            <img src="./images/coffee-asorted-300x300.jpg" class="" alt="">
+                            <img src="./images/eggs-300x300.jpg" class="" alt="">
                         </div>
                         <div class="flex flex-col justify-center items-center text-center py-3 ">
                             <div class="">
-                                <p class="font-thin">Groceries</p>
-                                <p class="font-medium text-lg">Assorted Coffee</p>
+                                <p class="font-thin">Juice</p>
+                                <p class="font-medium text-lg">Farm Fresh Eggs</p>
                                 <ul class="flex flex-row items-center justify-center">
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
@@ -256,18 +257,18 @@
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                 </ul>
-                                <p class="font-bold ">$35.00</p>
+                                <p class="font-bold ">$34.00</p>
                             </div>
                         </div>
                     </div>
-                    <div class="flex flex-row flex-col justify-center items-center mx-2">
+                    <div class="flex flex-row flex-col justify-center items-center mx-2 my-4">
                         <div class="mb-3 mx-auto">
-                            <img src="./images/coffee-asorted-300x300.jpg" class="" alt="">
+                            <img src="./images/orage-juice-kariz-300x300.jpg" class="" alt="">
                         </div>
                         <div class="flex flex-col justify-center items-center text-center py-3 ">
                             <div class="">
-                                <p class="font-thin">Groceries</p>
-                                <p class="font-medium text-lg">Assorted Coffee</p>
+                                <p class="font-thin">Juice </p>
+                                <p class="font-medium text-lg">Fresh Orange Juice</p>
                                 <ul class="flex flex-row items-center justify-center">
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
@@ -275,18 +276,18 @@
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                 </ul>
-                                <p class="font-bold ">$35.00</p>
+                                <p class="font-bold ">$18.00</p>
                             </div>
                         </div>
                     </div>
-                    <div class="flex flex-row flex-col justify-center items-center mx-2">
+                    <div class="flex flex-row flex-col justify-center items-center mx-2 my-4">
                         <div class="mb-3 mx-auto">
-                            <img src="./images/coffee-asorted-300x300.jpg" class="" alt="">
+                            <img src="./images/organic-honey-300x300.jpg" class="" alt="">
                         </div>
                         <div class="flex flex-col justify-center items-center text-center py-3 ">
                             <div class="">
-                                <p class="font-thin">Groceries</p>
-                                <p class="font-medium text-lg">Assorted Coffee</p>
+                                <p class="font-thin">Juice</p>
+                                <p class="font-medium text-lg">Fresh Organic Honey</p>
                                 <ul class="flex flex-row items-center justify-center">
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
@@ -294,18 +295,18 @@
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                 </ul>
-                                <p class="font-bold ">$35.00</p>
+                                <p class="font-bold ">$34.00</p>
                             </div>
                         </div>
                     </div>
-                    <div class="flex flex-row flex-col justify-center items-center mx-2">
+                    <div class="flex flex-row flex-col justify-center items-center mx-2 my-4">
                         <div class="mb-3 mx-auto">
-                            <img src="./images/coffee-asorted-300x300.jpg" class="" alt="">
+                            <img src="./images/edible-oil-300x300.jpg" class="" alt="">
                         </div>
                         <div class="flex flex-col justify-center items-center text-center py-3 ">
                             <div class="">
                                 <p class="font-thin">Groceries</p>
-                                <p class="font-medium text-lg">Assorted Coffee</p>
+                                <p class="font-medium text-lg">Natural Extracted Edible Oil</p>
                                 <ul class="flex flex-row items-center justify-center">
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
@@ -313,18 +314,18 @@
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                 </ul>
-                                <p class="font-bold ">$35.00</p>
+                                <p class="font-bold ">$25.00</p>
                             </div>
                         </div>
                     </div>
-                    <div class="flex flex-row flex-col justify-center items-center mx-2">
+                    <div class="flex flex-row flex-col justify-center items-center mx-2 my-4">
                         <div class="mb-3 mx-auto">
-                            <img src="./images/coffee-asorted-300x300.jpg" class="" alt="">
+                            <img src="./images/pulses-300x300.jpg" class="" alt="">
                         </div>
                         <div class="flex flex-col justify-center items-center text-center py-3 ">
                             <div class="">
                                 <p class="font-thin">Groceries</p>
-                                <p class="font-medium text-lg">Assorted Coffee</p>
+                                <p class="font-medium text-lg">Pulses From Organic Farm</p>
                                 <ul class="flex flex-row items-center justify-center">
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
@@ -332,18 +333,18 @@
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                 </ul>
-                                <p class="font-bold ">$35.00</p>
+                                <p class="font-bold ">$15.00</p>
                             </div>
                         </div>
                     </div>
-                    <div class="flex flex-row flex-col justify-center items-center mx-2">
+                    <div class="flex flex-row flex-col justify-center items-center mx-2 my-4">
                         <div class="mb-3 mx-auto">
-                            <img src="./images/coffee-asorted-300x300.jpg" class="" alt="">
+                            <img src="./images/wheat-300x300.jpg" class="" alt="">
                         </div>
                         <div class="flex flex-col justify-center items-center text-center py-3 ">
                             <div class="">
                                 <p class="font-thin">Groceries</p>
-                                <p class="font-medium text-lg">Assorted Coffee</p>
+                                <p class="font-medium text-lg">Wheat From Organic Farms</p>
                                 <ul class="flex flex-row items-center justify-center">
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
@@ -351,25 +352,28 @@
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                     <li><ion-icon name="star-outline"></ion-icon></li>
                                 </ul>
-                                <p class="font-bold ">$35.00</p>
+                                <p class="font-bold ">$34.00</p>
                             </div>
                         </div>
                     </div>
-                    <div class="join">
-                        <input class="join-item btn  btn-square  btn-outline" type="radio" name="options" aria-label="1"
-                            checked />
-                        <input class="join-item btn btn-square btn-outline" type="radio" name="options"
-                            aria-label="2" />
-                        <input class="join-item btn btn-square btn-outline" type="radio" name="options"
-                            aria-label="3" />
-                        <input class="join-item btn btn-square  btn-outline" type="radio" name="options"
-                            aria-label="4" />
-                    </div>
+
+
+
+                </div>
+                <div class="join my-5 mx-5 flex justify-center items-center">
+                    <input class="join-item btn  btn-square  btn-outline " type="radio" name="options" aria-label="1"
+                        checked />
+                    <input class="join-item btn btn-square btn-outline " type="radio" name="options" aria-label="2" />
+                    <input class="join-item btn btn-square btn-outline" type="radio" name="options" aria-label="3" />
+                    <input class="join-item btn btn-square  btn-outline " type="radio" name="options" aria-label="4" />
                 </div>
 
             </div>
 
         </div>
+
+        </div>
+
     </section>
     <footer class="bg-[#001524]">
         <div class=" w-[80%] grid grid-cols-2 mx-auto justify-start text-white ">
