--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,141 @@
             </div>
         </div>
     </section>
+    <section class="my-10">
+        <div class="flex flex-col items-center justify-center text-center mx-auto my-8">
+            <p class="text-2xl lg:text-5xl my-4 font-semibold ">Frequently Asked Question!</p>
+            <div><img src="./images/logo-leaf-new.png" alt=""></div>
+        </div>
 
+        <div class="grid grid-cols-1 lg:grid-cols-2 justify-center w-[90%] mx-auto my-4">
+            <div class="w-[80%] mx-auto my-4">
+                <details class="collapse border-b-2 collapse-arrow">
+                    <summary class="collapse-title text-xl font-medium">Pulvinar nostrud class cum facilis?</summary>
+                    <div class="collapse-content">
+                        <p>I am item content. Click edit button to change this text. Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar leo.
+                        </p>
+                    </div>
+                </details>
+            </div>
+            <div class="w-[80%] mx-auto my-4">
+                <details class="collapse border-b-2 collapse-arrow">
+                    <summary class="collapse-title text-xl font-medium">Pon excepturi numquam, facilis?</summary>
+                    <div class="collapse-content">
+                        <p>I am item content. Click edit button to change this text. Lorem ipsum dolor sit amet,
+                            adipiscing elit. Ut elit tellus, luctus nec mattis, pulvinar dapibus leo.</p>
+                    </div>
+                </details>
+            </div>
+            <div class="w-[80%] mx-auto my-4">
+                <details class="collapse border-b-2 collapse-arrow">
+                    <summary class="collapse-title text-xl font-medium">Pon excepturi numquam, facilis?</summary>
+                    <div class="collapse-content">
+                        <p>I am item content. Click edit button to change this text. Lorem ipsum dolor sit amet,
+                            adipiscing elit. Ut elit tellus, luctus nec mattis, pulvinar dapibus leo.</p>
+                    </div>
+                </details>
+            </div>
+            <div class="w-[80%] mx-auto my-4">
+                <details class="collapse border-b-2 collapse-arrow">
+                    <summary class="collapse-title text-xl font-medium">Pon excepturi numquam, facilis?</summary>
+                    <div class="collapse-content">
+                        <p>I am item content. Click edit button to change this text. Lorem ipsum dolor sit amet,
+                            adipiscing elit. Ut elit tellus, luctus nec mattis, pulvinar dapibus leo.</p>
+                    </div>
+                </details>
+            </div>
+            <div class="w-[80%] mx-auto my-4">
+                <details class="collapse border-b-2 collapse-arrow">
+                    <summary class="collapse-title text-xl font-medium">Consequat nesciunt fusce facilisi?</summary>
+                    <div class="collapse-content">
+                        <p>I am item content. Click edit button to change this text. Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit. Ut luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                    </div>
+                </details>
+            </div>
+            <div class="w-[80%] mx-auto my-4">
+                <details class="collapse border-b-2 collapse-arrow">
+                    <summary class="collapse-title text-xl font-medium">Consequat nesciunt fusce facilisi?</summary>
+                    <div class="collapse-content">
+                        <p>I am item content. Click edit button to change this text. Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit. Ut luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                    </div>
+                </details>
+            </div>
+
+        </div>
+    </section>
+    <footer class="bg-[#001524]">
+        <div class=" w-[80%] grid grid-cols-2 mx-auto justify-start text-white ">
+            <div class="flex flex-col my-10">
+                <div><img src="./images/organic-store-white-logo.png" alt=""></div>
+                <div class=" my-10  text-[#5e6b75] text-lg ">
+                    <p class="pr-[100px]">Maecenas mi justo, interdum at consectetur vel, tristique et arcu. Ut quis
+                        eros blandit, ultrices
+                        diam in, elementum ex. Suspendisse quis faucibus urna. Suspendisse pellentesque.</p>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 items-center  gap-4 my-10">
+                <div class="flex flex-col items-start ">
+                    <div class="text-xl font-semibold my-3 ">
+                        <h1>Quick Links</h1>
+                    </div>
+                    <div class="text-[#5e6b75] text-md p-2">
+                        <ul>
+                            <li>About</li>
+                            <li>Cart</li>
+                            <li>Checkout</li>
+                            <li>Contact</li>
+                            <li>Home</li>
+                            <li>My account</li>
+                            <li>Shop</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="flex flex-col items-start">
+                    <div class="text-xl font-semibold my-3 ">
+                        <h1>Download Our Mobile App</h1>
+                    </div>
+                    <p class="text-[#5e6b75] text-md p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde,
+                        praesentium fugit expedita aperiam
+                        sapiente consequatur? Commodi similique maxime sapiente, quis tenetur excepturi voluptatum
+                        veniam possimus blanditiis dicta. Pariatur, corporis iste?</p>
+                </div>
+                <div class="flex flex-col items-start">
+                    <div class="text-xl font-semibold my-3 ">
+                        <h1>Site Links</h1>
+                    </div>
+                    <div class="text-[#5e6b75] text-md p-2">
+                        <ul>
+                            <li>Privacy Policy</li>
+                            <li>Shipping Details</li>
+                            <li>Offers Coupons </li>
+                            <li>Terms & Conditions</li>
+
+                        </ul>
+                    </div>
+                </div>
+                <div class="flex flex-col items-start">
+                    <div class="text-xl font-semibold my-3 ">
+                        <h1>
+                            Quick Links
+                        </h1>
+                    </div>
+                    <div class="text-[#8bc34a] text-md p-2">
+                        <ul>
+                            <li>Know More About Us</li>
+                            <li>Visit Store</li>
+                            <li>Let’s Connect
+                            </li>
+                            <li>Locate Stores</li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
